--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "express": "^4.16.4",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.2",
-    "sequelize": "^6.8.0"
+    "sequelize": "^6.8.0",
+    "vue": "^3.3.8"
   },
   "engines": {
     "node": ">=12.0.0"
-  }
+  },
+  "type":"module"
 }
